# public-repo-audit

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml  report.json  report.md
.github/workflows/: ci.yml
docs/: github-actions.md  scoring.md
docs/audits/: RUN_B_VALIDATION.md
docs/audits/agent-desk/: report.json  report.md
docs/audits/agent-skill-quality-gate/: report.json  report.md
docs/audits/quality-docs-validator/: report.json  report.md
docs/examples/: github-actions-public-repo-audit.yml
docs/plans/: v0.2-output-format-options.md
docs/superpowers/plans/: 2026-06-20-public-repo-audit-mvp.md
src/public_repo_audit/: __init__.py  audit.py  cli.py  models.py  reporting.py
tests/: test_audit.py
