[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "public-repo-audit"
version = "0.1.0"
description = "Audit whether a Python repository is ready to be public on GitHub."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "CriaTek" }]
dependencies = []

[project.scripts]
public-repo-audit = "public_repo_audit.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
