[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "public-repo-audit"
version = "0.1.0"
description = "Audit whether a Python repository is ready to be public on GitHub."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "CriaTek" }]
keywords = ["github", "open-source", "audit", "python", "readiness", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Utilities",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.urls]
Homepage = "https://github.com/CriaTek/public-repo-audit"
Issues = "https://github.com/CriaTek/public-repo-audit/issues"

[project.scripts]
public-repo-audit = "public_repo_audit.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
